--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,16 @@
 version: '3.5'
 
 services:
+    mysql:
+        image: percona:8.0
+        volumes:
+            - mysql-db:/var/lib/mysql
+        environment:
+            - MYSQL_DATABASE
+            - MYSQL_USER
+            - MYSQL_PASSWORD
+            - MYSQL_ROOT_PASSWORD
+            - MYSQL_ALLOW_EMPTY_PASSWORD
     postgres:
         image: postgres:14.6
         volumes:
@@ -11,5 +21,6 @@ services:
             - POSTGRES_PASSWORD
 
 volumes:
+    mysql-db:
     postgres-db:
 
